--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
       # Get current date and time
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%-dT%H:%M')"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%-dT%H-%M')"
 
       # Create a release to add the files to
       - name: Create release
@@ -68,7 +68,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.date.outputs.date }}
+          tag_name: r${{ steps.date.outputs.date }}
           release_name: Release ${{ steps.date.outputs.date }}
           body: |
             Compilation of new features
