--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy: 
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8', '3.10']
+        os: [ ubuntu-latest ]
+        # os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: [ '3.8' ]
+        # python-version: ['3.8', '3.10']
         
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -54,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with: 
           name: release-${{ matrix.os }}-py${{ matrix.python-version }}
-          path: dist/release-${{ matrix.os }}-py${{ matrix.python-version }}.zip
+          path: release-${{ matrix.os }}-py${{ matrix.python-version }}.zip
 
       # Get current date and time
       - name: Get current date
@@ -80,7 +82,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/release-${{ matrix.os }}-py${{ matrix.python-version }}.zip
+          asset_path: release-${{ matrix.os }}-py${{ matrix.python-version }}.zip
           asset_name: release-${{ matrix.os }}-${{ matrix.python-version }}.zip
           asset_content_type: application/zip
           
