Add debug print of directories to find zip files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,11 @@ jobs:
           filename: release-${{ matrix.os }}-py${{ matrix.python-version }}
           path: 'dist/main/'
 
+      - name: Show content
+        run: |
+           ls -la
+           ls -la dist/
+
       # Add package to archive so we can inspect it
       - name: Archive artifact
         uses: actions/upload-artifact@v2
