--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: build
 # Run Workflow manually or on push to master
 on:
   push:
-    branches: [ master ]
+    tags:
+      - 'rc-*'
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -56,39 +57,48 @@ jobs:
         uses: actions/upload-artifact@v2
         with: 
           name: release-${{ matrix.os }}-py${{ matrix.python-version }}
-          path: release-${{ matrix.os }}-py${{ matrix.python-version }}.zip
+          path: dist/main/
 
       # Get current date and time
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%-dT%H-%M')"
+#      - name: Get current date
+#        id: date
+#        run: echo "::set-output name=date::$(date +'%Y-%m-%-dT%H-%M')"
+
+      # Publish as release
+      - name: Publish release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: release-${{ matrix.os }}-py${{ matrix.python-version }}
+          artifactContentType: application/zip
+          token: ${{ secrets.GITHUB_TOKEN }}
+          allowUpdates: true
 
       # Create a release to add the files to
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: r${{ steps.date.outputs.date }}
-          release_name: Release ${{ steps.date.outputs.date }}
-          body: |
-            Compilation of new features
-          prerelease: false
+#      - name: Create release
+#        id: create_release
+#        uses: actions/create-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          tag_name: r${{ steps.date.outputs.date }}
+#          release_name: Release ${{ steps.date.outputs.date }}
+#          body: |
+#            Compilation of new features
+#          prerelease: false
 
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: release-${{ matrix.os }}-py${{ matrix.python-version }}.zip
-          asset_name: release-${{ matrix.os }}-${{ matrix.python-version }}.zip
-          asset_content_type: application/zip
+#      - name: Upload release asset
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: release-${{ matrix.os }}-py${{ matrix.python-version }}.zip
+#          asset_name: release-${{ matrix.os }}-${{ matrix.python-version }}.zip
+#          asset_content_type: application/zip
           
-      - name: Publish release
-        uses: StuYarrow/publish-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with: 
-          id: ${{ steps.create_release.outputs.id }}
+#      - name: Publish release
+#        uses: StuYarrow/publish-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          id: ${{ steps.create_release.outputs.id }}
