--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Publish release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: release-${{ matrix.os }}-py${{ matrix.python-version }}
+          artifacts: release-*.zip
           artifactContentType: application/zip
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
