--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy: 
       matrix:
-        os: [ ubuntu-latest ]
-        # os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ '3.8' ]
-        # python-version: ['3.8', '3.10']
+         os: [ ubuntu18.04, ubuntu20.04, macos-11, windows-2022 ]
+         python-version: ['3.6', '3.8', '3.10']
         
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -59,11 +57,6 @@ jobs:
           name: release-${{ matrix.os }}-py${{ matrix.python-version }}
           path: dist/main/
 
-      # Get current date and time
-#      - name: Get current date
-#        id: date
-#        run: echo "::set-output name=date::$(date +'%Y-%m-%-dT%H-%M')"
-
       # Publish as release
       - name: Publish release
         uses: ncipollo/release-action@v1
@@ -72,33 +65,3 @@ jobs:
           artifactContentType: application/zip
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
-
-      # Create a release to add the files to
-#      - name: Create release
-#        id: create_release
-#        uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          tag_name: r${{ steps.date.outputs.date }}
-#          release_name: Release ${{ steps.date.outputs.date }}
-#          body: |
-#            Compilation of new features
-#          prerelease: false
-
-#      - name: Upload release asset
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: release-${{ matrix.os }}-py${{ matrix.python-version }}.zip
-#          asset_name: release-${{ matrix.os }}-${{ matrix.python-version }}.zip
-#          asset_content_type: application/zip
-          
-#      - name: Publish release
-#        uses: StuYarrow/publish-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          id: ${{ steps.create_release.outputs.id }}
